--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,13 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script lang="js">
+    (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+            history.replaceState(null, null, redirect);
+        }
+    })();
+  </script>
 </html>
