--- a/404.html
+++ b/404.html
@@ -6,8 +6,9 @@
             // This text is simply to make sure the 404.html file is bigger than 512 bytes, else, internet explorer will ignore it.
             // Thank you internet explorer for requiring such awesome workarounds in order to work properly
             // ====================================================================================================================
-            sessionStorage.redirect = location.href;
+            var pathName = window.location.pathname;
+            var redirectPath = '/<repository-name>/redirect';
+            location.href = redirectPath + '?p=' + encodeURI(pathName);
         </script>
-        <meta http-equiv="refresh" content="0;URL='/'">
     </head>
 </html>
