--- a/404.html
+++ b/404.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script>
-            // ====================================================================================================================
-            // This text is simply to make sure the 404.html file is bigger than 512 bytes, else, internet explorer will ignore it.
-            // Thank you internet explorer for requiring such awesome workarounds in order to work properly
-            // ====================================================================================================================
-            var pathName = window.location.pathname;
-            var redirectPath = '/<repository-name>/redirect';
-            location.href = redirectPath + '?p=' + encodeURI(pathName);
-        </script>
-    </head>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Pidsamhai/favicon.ico"><title>pidsamhai</title><script defer="defer" src="/Pidsamhai/js/chunk-vendors.2d17df2f.js"></script><script defer="defer" src="/Pidsamhai/js/app.e0e5b6b4.js"></script><link href="/Pidsamhai/css/chunk-vendors.1deb8dc0.css" rel="stylesheet"><link href="/Pidsamhai/css/app.bdf05990.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but pidsamhai doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body><script lang="js">(function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+            history.replaceState(null, null, redirect);
+        }
+    })();</script></html>
