--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>Pidsamhai</title><script defer="defer" src="/js/chunk-vendors.7e14aa3e.js"></script><script defer="defer" src="/js/index.474c4f90.js"></script><link href="/css/chunk-vendors.597dda82.css" rel="stylesheet"><link href="/css/index.fb7c7f19.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Pidsamhai doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body><script lang="js">(function(){
-        var redirect = sessionStorage.redirect;
-        delete sessionStorage.redirect;
-        if (redirect && redirect != location.href) {
-            history.replaceState(null, null, redirect);
-        }
-    })();</script></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="/favicon.ico"/><title>Pidsamhai</title><script defer="defer" src="/js/chunk-vendors.9d23ff89.js"></script><script defer="defer" src="/js/index.7a373fba.js"></script><link href="/css/chunk-vendors.0364e47e.css" rel="stylesheet"><link href="/css/index.2b6264e9.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Pidsamhai doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
