--- a/out.html
+++ b/out.html
@@ -1,7 +1,19 @@
-<template>
-  <div class="tw-prose no-tailwindcss-base">
-    <h1>Movie DB Privacy Policy</h1>
-    <p>Last updated: Oct 3, 2023</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pixel Tour | Provacy Policy</title>
+    <style>
+      * {
+        font-family: monospace;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Pixel Tour Privacy Policy</h1>
+    <p>Last updated: October 14, 2022</p>
     <p>
       This Privacy Policy describes Our policies and procedures on the
       collection, use and disclosure of Your information when You use the
@@ -32,22 +44,23 @@
       <li>
         <p>
           <strong>Affiliate</strong> means an entity that controls, is
-          controlled by or is under common control with a party, where "control"
-          means ownership of 50% or more of the shares, equity interest or other
-          securities entitled to vote for election of directors or other
-          managing authority.
+          controlled by or is under common control with a party, where
+          &quot;control&quot; means ownership of 50% or more of the shares,
+          equity interest or other securities entitled to vote for election of
+          directors or other managing authority.
         </p>
       </li>
       <li>
         <p>
           <strong>Application</strong> means the software program provided by
-          the Company downloaded by You on any electronic device, named Movie DB
+          the Company downloaded by You on any electronic device, named Meepro
         </p>
       </li>
       <li>
         <p>
-          <strong>Company</strong> (referred to as either "the Company", "We",
-          "Us" or "Our" in this Agreement) refers to Movie DB.
+          <strong>Company</strong> (referred to as either &quot;the
+          Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in
+          this Agreement) refers to Meepro.
         </p>
       </li>
       <li>
@@ -385,8 +398,8 @@
     </p>
     <p>
       We will let You know via email and/or a prominent notice on Our Service,
-      prior to the change becoming effective and update the "Last updated" date
-      at the top of this Privacy Policy.
+      prior to the change becoming effective and update the &quot;Last
+      updated&quot; date at the top of this Privacy Policy.
     </p>
     <p>
       You are advised to review this Privacy Policy periodically for any
@@ -398,13 +411,19 @@
       If you have any questions about this Privacy Policy, You can contact us:
     </p>
     <ul>
-      <li>By email: dev.psm.crop@gmail.com</li>
+      <li>
+        By email:
+        <a
+          href="/cdn-cgi/l/email-protection"
+          class="__cf_email__"
+          data-cfemail="82f1f7f2f2edf0f6c2efe7e7f2f0edacece7f6"
+          >[email&#160;protected]</a
+        >
+      </li>
     </ul>
-  </div>
-</template>
-<script lang="ts">
-import { Component, Vue } from "vue-facing-decorator";
-
-@Component
-export default class AboutView extends Vue {}
-</script>
+    <script
+      data-cfasync="false"
+      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
+  </body>
+</html>
